🐳 chore(gitignore): 调整配置文件

--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,9 @@ migrate_working_dir/
 /pubspec.lock
 **/doc/api/
 .dart_tool/
-.packages
-build/
 .flutter-plugins
 .flutter-plugins-dependencies
+.packages
+.pub-cache/
+.pub/
+/build/
