--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: tdesign_flutter
+name: tdesign_mobile_flutter
 description: TDesign 适配移动端的组件库，适合在 flutter 技术栈项目中使用。
 version: 0.0.4
 homepage: https://github.com/Kigoal/tdesign_flutter
